# ColDag

./: .replit  config.py  main.py  models.py  node_suggestions.json  package-lock.json  package.json  pasted_text_1725952817078.txt  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: admin.html  admin_users.html  base.html  change_expired_password.html  enable_2fa.html  forgot_password.html  index.html  login.html  profile.html  register.html  reset_password.html  reset_password_confirm.html  reset_password_request.html  two_factor_auth.html  user_activity.html
templates/email/: reset_password.html
