[tool.poetry]
name = "repl-nix-quickauthapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
werkzeug = "^3.0.4"
psycopg2-binary = "^2.9.9"
networkx = "^3.3"
flask-mail = "^0.10.0"
pyotp = "^2.9.0"
pillow = "^10.4.0"
qrcode = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
